Применил автофикс eslint и форматирование prettier по всему коду
